# brpc

./: .gitignore  LICENSE  Makefile  README.md  bench.c  build.zig
.github/workflows/: ci.yml
examples/: main.c
include/: brpc_channel.h  brpc_compress.h  brpc_error.h  brpc_frame.h  brpc_prof.h  brpc_rpc.h  brpc_stream.h  brpc_tls.h  json_hotpath.h
python/brpc/: MANIFEST.in  pyproject.toml
python/brpc/src/brpc/: __init__.py  _build.py
python/brpc/src/brpc/benchmarks/: __init__.py  runner.py  suite.py
python/brpc/tests/: test_brpc.py
src/: brpc_channel.c  brpc_compress.c  brpc_error.c  brpc_frame.c  brpc_prof.c  brpc_rpc.c  brpc_stream.c  brpc_tls.c  json_hotpath.c
tests/: test_brpc.c
