[project]
name = "brpc"
version = "0.1.0"
description = "High-performance bRPC: binary RPC with JSON hotpath serialization and multiplexed streams"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "brpc Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
keywords = ["rpc", "json", "networking", "streaming", "multiplexing", "binary"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "rich>=13.0",
]
bench = [
    "rich>=13.0",
]

[project.scripts]
brpc-bench = "brpc.benchmarks.runner:main"

[project.urls]
Homepage = "https://github.com/user/brpc"
Repository = "https://github.com/user/brpc"
Issues = "https://github.com/user/brpc/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brpc = ["_libbrpc.so"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
